--- a/ClimbingDocumentation/app/src/main/res/layout/activity_main.xml
+++ b/ClimbingDocumentation/app/src/main/res/layout/activity_main.xml
@@ -9,105 +9,98 @@
     <TextView
         android:id="@+id/headingMainAct"
         android:layout_width="229dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginBottom="91dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="91dp"
+        android:layout_marginTop="71dp"
         android:text="@string/add_new_climbs"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/mainClimbName"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/gradeSelect"
-        android:layout_width="153dp"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="@+id/headingMainAct"
-        app:layout_constraintTop_toBottomOf="@+id/headingMainAct">
-
-        <RadioButton
-            android:id="@+id/ropedClimb"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:text="@string/roped_climb" />
+        android:layout_width="163dp"
+        android:layout_height="95dp"
+        android:layout_marginStart="91dp"
+        android:layout_marginTop="206dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <RadioButton
             android:id="@+id/boulderClimb"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:text="@string/boulder" />
+
+        <RadioButton
+            android:id="@+id/ropedClimb"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:text="@string/roped_climb" />
     </RadioGroup>
 
     <EditText
         android:id="@+id/mainClimbName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="301dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/climb_name"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/mainClimbGrade"
         app:layout_constraintStart_toStartOf="@+id/gradeSelect"
-        app:layout_constraintTop_toBottomOf="@+id/headingMainAct" />
-
-    <EditText
-        android:id="@+id/mainClimbGrade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/grade"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/mainClimbDate"
-        app:layout_constraintStart_toStartOf="@+id/mainClimbName"
-        app:layout_constraintTop_toBottomOf="@+id/mainClimbName" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/mainClimbDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="409dp"
+        android:layout_marginTop="391dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/date_climbed"
         android:inputType="date"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/mainClimbGrade"
-        app:layout_constraintTop_toBottomOf="@+id/mainClimbGrade" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/mainClimbGrade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="346dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="@string/grade"
+        android:inputType="textPersonName"
+        app:layout_constraintStart_toStartOf="@+id/mainClimbName"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/mainGoToList"
         android:layout_width="156dp"
         android:layout_height="45dp"
-        android:layout_marginStart="239dp"
-        android:layout_marginTop="483dp"
+        android:layout_marginTop="546dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="203dp"
+        android:layout_marginBottom="140dp"
         android:onClick="goToDisplayList"
         android:text="@string/view_list"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/mainAddClimb"
         android:layout_width="156dp"
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="483dp"
+        android:layout_marginTop="546dp"
         android:layout_marginEnd="239dp"
-        android:layout_marginBottom="203dp"
+        android:layout_marginBottom="140dp"
         android:onClick="addClimbToList"
         android:text="@string/add_new_climb"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
