--- a/ClimbingDocumentation/app/src/main/res/layout/display_climbs.xml
+++ b/ClimbingDocumentation/app/src/main/res/layout/display_climbs.xml
@@ -4,13 +4,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".DisplayActivity">
+
+    <Button
+        android:id="@+id/dispGoToMainAct"
+        android:layout_width="156dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="546dp"
+        android:layout_marginEnd="239dp"
+        android:layout_marginBottom="140dp"
+        android:onClick="goToMainAct"
+        android:text="@string/add_more_climbs"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/lastClimb"
+        android:layout_width="73dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="322dp"
+        android:layout_marginTop="546dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="140dp"
+        android:onClick="lastClimb"
+        android:text="@string/last"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/dispNext"
+        android:layout_width="71dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="224dp"
+        android:layout_marginTop="546dp"
+        android:layout_marginEnd="116dp"
+        android:layout_marginBottom="140dp"
+        android:onClick="nextClimb"
+        android:text="@string/next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/headingMainAct"
         android:layout_width="212dp"
         android:layout_height="0dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="71dp"
         android:layout_marginBottom="68dp"
         android:text="@string/view_climb_list"
         android:textSize="30sp"
@@ -34,9 +79,7 @@
         android:id="@+id/dispClimbDate"
         android:layout_width="223dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="442dp"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dispClimbGrade" />
