--- a/AccountintApp/app/src/main/res/layout/activity_main.xml
+++ b/AccountintApp/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
+        android:onClick="toStatementPage"
         android:text="@string/income_statement"
         app:layout_constraintBaseline_toBaselineOf="@+id/add_transaction_main"
         app:layout_constraintEnd_toEndOf="parent"
