--- a/AccountintApp/app/src/main/res/layout/activity_transaction.xml
+++ b/AccountintApp/app/src/main/res/layout/activity_transaction.xml
@@ -112,6 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
+        android:onClick="toStatementAct"
         android:text="@string/income_statement"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/new_transaction_transaction" />
